--- a/cepsokApp/Base.lproj/Main.storyboard
+++ b/cepsokApp/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -38,50 +37,38 @@
                                                                 <constraint firstAttribute="width" constant="128" id="seE-8A-GaQ"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="ADF-MB-u7y">
-                                                            <rect key="frame" x="16" y="20.666666666666671" width="303.33333333333331" height="117.00000000000001"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ADF-MB-u7y">
+                                                            <rect key="frame" x="16" y="22.666666666666664" width="205.33333333333334" height="112.66666666666669"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amigo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D0O-4v-eYH">
                                                                     <rect key="frame" x="0.0" y="0.0" width="105.33333333333333" height="39"/>
                                                                     <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="30"/>
-                                                                    <color key="textColor" name="textColor"/>
+                                                                    <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="%100 doğal, sağlıklı ve lifli kuruyemişler." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6r-sh-kxu">
-                                                                    <rect key="frame" x="0.0" y="39" width="303.33333333333331" height="39"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bir takım yazılar var burada" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHj-bc-CMv">
+                                                                    <rect key="frame" x="0.0" y="51.000000000000007" width="205.33333333333334" height="20.333333333333336"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <color key="textColor" name="textColor"/>
+                                                                    <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qWv-EW-L7M">
-                                                                    <rect key="frame" x="0.0" y="78" width="116" height="39"/>
+                                                                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qWv-EW-L7M">
+                                                                    <rect key="frame" x="0.0" y="83.333333333333343" width="140" height="29.333333333333329"/>
                                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                                    <buttonConfiguration key="configuration" style="gray" cornerStyle="medium" titleAlignment="center">
-                                                                        <attributedString key="attributedTitle">
-                                                                            <fragment content="Tüm Ürünleri Gör">
-                                                                                <attributes>
-                                                                                    <font key="NSFont" size="14" name="Arial-BoldMT"/>
-                                                                                </attributes>
-                                                                            </fragment>
-                                                                        </attributedString>
-                                                                        <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
-                                                                        <color key="baseForegroundColor" name="textColor"/>
-                                                                        <color key="baseBackgroundColor" name="backgroundColor"/>
+                                                                    <buttonConfiguration key="configuration" style="plain" title="Tüm Ürünleri Gör" cornerStyle="medium" titleAlignment="automatic">
+                                                                        <fontDescription key="titleFontDescription" name="Arial-BoldMT" family="Arial" pointSize="14"/>
                                                                     </buttonConfiguration>
-                                                                    <connections>
-                                                                        <action selector="gorButton:" destination="iOU-R4-1SF" eventType="touchUpInside" id="zlc-Ex-lVD"/>
-                                                                    </connections>
                                                                 </button>
                                                             </subviews>
                                                         </stackView>
                                                     </subviews>
-                                                    <color key="backgroundColor" name="backgroundColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="sv3-I6-aoI" secondAttribute="trailing" constant="16" id="Pab-3r-SAa"/>
                                                         <constraint firstItem="ADF-MB-u7y" firstAttribute="leading" secondItem="jPo-QG-kxL" secondAttribute="leading" constant="16" id="SdX-df-Ukc"/>
                                                         <constraint firstItem="sv3-I6-aoI" firstAttribute="centerY" secondItem="jPo-QG-kxL" secondAttribute="centerY" id="XEA-d3-rYV"/>
                                                         <constraint firstItem="sv3-I6-aoI" firstAttribute="centerY" secondItem="jPo-QG-kxL" secondAttribute="centerY" id="gWk-K1-veD"/>
-                                                        <constraint firstItem="ADF-MB-u7y" firstAttribute="centerY" secondItem="jPo-QG-kxL" secondAttribute="centerY" id="sWz-Ir-Ice"/>
+                                                        <constraint firstItem="ADF-MB-u7y" firstAttribute="centerY" secondItem="sv3-I6-aoI" secondAttribute="centerY" id="hy1-iZ-Ofp"/>
+                                                        <constraint firstItem="ADF-MB-u7y" firstAttribute="top" secondItem="jPo-QG-kxL" secondAttribute="top" constant="22.666666666666657" id="pHT-rN-d6P"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -93,8 +80,10 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="gorButton" destination="qWv-EW-L7M" id="gLH-uR-jJQ"/>
                                             <outlet property="hucreBackground" destination="jPo-QG-kxL" id="xCy-9X-fiT"/>
-                                            <outlet property="urunDescriptionLabel" destination="c6r-sh-kxu" id="lPh-xi-u83"/>
+                                            <outlet property="stackView" destination="ADF-MB-u7y" id="RL9-ym-JvJ"/>
+                                            <outlet property="urunDescriptionLabel" destination="MHj-bc-CMv" id="MDe-TV-dLY"/>
                                             <outlet property="urunResimImageView" destination="sv3-I6-aoI" id="2yb-H8-NCX"/>
                                             <outlet property="urunTitleLabel" destination="D0O-4v-eYH" id="1W4-jU-zfN"/>
                                         </connections>
@@ -143,12 +132,6 @@
     <color key="tintColor" white="0.38" alpha="1" colorSpace="calibratedWhite"/>
     <resources>
         <image name="amigo" width="66" height="89"/>
-        <namedColor name="backgroundColor">
-            <color red="0.86869698762893677" green="0.92308801412582397" blue="0.9526817798614502" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="textColor">
-            <color red="0.37364321950000001" green="0.4999905825" blue="0.59609436989999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-        </namedColor>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
